--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ API_TOKEN=
 # If empty, the TZ environment variable is used. If TZ is also empty, defaults to UTC.
 # Examples: Asia/Singapore, Europe/Amsterdam, America/New_York
 # Default: (empty)
-TIMEZONE=Europe/Amsterdam
+TIMEZONE=
 
 
 # ────────────────────────────────
@@ -53,7 +53,7 @@ FEATURES=telegram,network,stats,auth_lua
 
 # SERVICES: Comma-separated list of system services to monitor and notify on failure.
 # Default: xray,fail2ban-server
-SERVICES=xray,haproxy,nginx,fail2ban-server
+SERVICES=xray,haproxy,nginx,warp-svc,fail2ban-server
 
 # MONITOR_TICKER_INTERVAL: Interval (in seconds) for polling monitored services and users.
 # Recommended: 5–60
