--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ core:
   config: /usr/local/etc/xray/config.json                                       # Path to the main configuration file for the proxy core (e.g., Xray or Singbox config).
   access_log: /usr/local/etc/xray/access.log                                    # Path to the proxy core's access log file for tracking user sessions and IPs.
   access_log_regex: 'from tcp:([0-9\.]+).*?tcp:([\w\.\-]+):\d+.*?email: (\S+)'  # Regular expression to parse access log. Should extract source IP, destination host, and user email/remark.
-  # access_log_regex: 'login: (\S+); ip: ([0-9\.]+)'                              # Alternative regex (e.g., for custom login formats):
+  # access_log_regex: 'login: (\S+); ip: ([0-9\.]+)'                            # Alternative regex (e.g., for custom login formats):
 
 # v2ray-stat Settings
 v2ray-stat:
@@ -15,7 +15,7 @@ v2ray-stat:
   port: 9952                             # TCP port for v2ray-stat API server. Must be between 1 and 65535.
   monitor:
     ticker_interval: 10                  # Interval (in seconds) for polling monitored services and users. Recommended: 5–60.
-    online_rate_threshold: 0             # Minimum rate threshold in kilobits per second (kbps) to consider a user online. 0 means any non-zero rate is considered online.
+    online_rate_threshold: 15            # Minimum rate threshold in kilobits per second (kbps) to consider a user online. 0 means any non-zero rate is considered online.
 
 # API Settings
 api:
@@ -58,3 +58,32 @@ paths:
   f2b_log: /var/log/v2ray-stat.log                # Path to the log file for recording v2ray-stat violations or issues (e.g., IP limit exceeded).
   f2b_banned_log: /var/log/v2ray-stat-banned.log  # Path to the log file for recording IP bans and unbans.
   auth_lua: /etc/haproxy/.auth.lua                # Path to HAProxy's .auth.lua file, dynamically updated if auth_lua feature is enabled.
+
+# Statistics Columns Configuration
+stats_columns:
+  server:
+    # sort: rate DESC                    # Sorting rule for server statistics. Format: "<column> <ASC|DESC>". Default: "source ASC". Valid columns: source, rate, uplink, downlink, sess_uplink, sess_downlink.
+    columns:                             # List of columns to display in server statistics. If empty, no server statistics are shown.
+      - source                           # Source of traffic (e.g., IP or hostname).
+      - rate                             # Current traffic rate in bits per second (bps).
+      - uplink                           # Total uploaded traffic in bytes.
+      - downlink                         # Total downloaded traffic in bytes.
+      # - sess_uplink                    # Session-based uploaded traffic in bytes.
+      # - sess_downlink                  # Session-based downloaded traffic in bytes.
+  client:
+    # sort: rate DESC                    # Sorting rule for client statistics. Format: "<column> <ASC|DESC>". Default: "user ASC". Valid columns: user, uuid, last_seen, rate, uplink, downlink, sess_uplink, sess_downlink, enabled, sub_end, renew, lim_ip, ips, created. Can be overridden via URL parameters (?sort_by=<column>&sort_order=<ASC|DESC>).
+    columns:                             # List of columns to display in client statistics. If empty, no client statistics are shown.
+      - user                             # Client username or identifier.
+      # - uuid                           # Unique client identifier (UUID).
+      - last_seen                        # Timestamp of the last client activity.
+      - rate                             # Current traffic rate in bits per second (bps).
+      - uplink                           # Total uploaded traffic in bytes.
+      - downlink                         # Total downloaded traffic in bytes.
+      # - sess_uplink                    # Session-based uploaded traffic in bytes.
+      # - sess_downlink                  # Session-based downloaded traffic in bytes.
+      # - enabled                        # Whether the client is enabled (true/false).
+      # - sub_end                        # Subscription end date for the client.
+      # - renew                          # Renewal status or date for the client.
+      # - lim_ip                         # IP limit for the client (number of allowed IPs).
+      # - ips                            # List of IPs used by the client.
+      # - created                        # Timestamp when the client was created.
